landing page html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Crisse Soto</title>
 </head>
 <body>
-    
+    <div class="portfolio">
+        <header>
+            <nav>
+                <h3 class="logo">Crisse Soto</h3>
+                <img src="./img/hamburger.svg" alt="burger">
+            </nav>
+            <main>
+                <!-- Kiki Page-->
+                <section class="page Kiki">
+                    <div class="details">
+                        <h1>Kisaidy Soto</h1>
+                        <h2>Entrepreneur</h2>
+                        <p>25/11/1989</p>
+                    </div>
+                    <div class="hero">
+                        <img class="model-left" src="./img/kiki-links.jpg" alt="photo Kisaidy">
+                        <img class="model-right" src="./img/kiki-rechts.jpg" alt="photo Kisaidy">
+                    </div>
+                </section>
+
+                <!-- Crisniel Page-->
+                <section class="page crisniel">
+                    <div class="details">
+                        <h1>Crisniel Soto</h1>
+                        <h2>Top Chef</h2>
+                        <p>24/08/1990</p>
+                    </div>
+                    <div class="hero">
+                        <img class="model-left" src="./img/chef-left.jpg" alt="photo Crisniel">
+                        <img class="model-right" src="./img/chef-right.jpg" alt="photo Crisniel">
+                    </div>
+                </section>
+
+                <!-- Mildred Page-->
+                <section class="page mildred">
+                    <div class="details">
+                        <h1>Mildred Cuevas</h1>
+                        <h2>Super Manager</h2>
+                        <p>11/05/1969</p>
+                    </div>
+                    <div class="hero">
+                        <img class="model-left" src="./img/hair-left.jpg" alt="photo Mildred">
+                        <img class="model-right" src="./img/hair-right.jpg" alt="photo Mildred">
+                    </div>
+                </section>
+                <!-- End Sections -->
+
+                <!-- Sidebar pages navigation -->
+                <div class="pages">
+                    <div class="page-1">
+                        <h3>01</h3>
+                        <svg class="slide active" width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="6" cy="6" r="6" fill="white"/>
+                        </svg>
+                    </div>
+                    <div class="page-2">
+                        <h3>02</h3>
+                        <svg class="slide " width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="6" cy="6" r="6" fill="white"/>
+                        </svg>
+                    </div>
+                    <div class="page-3">
+                        <h3>03</h3>
+                        <svg class="slide " width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <circle cx="6" cy="6" r="6" fill="white"/>
+                        </svg>
+                    </div>
+                </div>
+            </main>
+        </header>
+    </div>
 </body>
 </html>
